--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Project oriented files
-*.tst
-*.out
-*.cmp
-*.hdl
-*.hack
-*.asm
-*.vm
-*.hack
+# Image / Excel files
+*.jpeg
+*.jpg
+*.png
+*.xlsx
